# hermes-headroom-plugin

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  INSTALL.md  PRIVACY.md  README.md  SECURITY.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  future-runtime-monitor.yml  release-candidate.yml  runtime-smoke.yml
docs/: AGENT-INSTALL.md  compatibility.md  release-candidate.md
docs/metrics/: weekly-savings.md
scripts/: audit-repo-readiness.sh  generate-weekly-savings-table.py  install-hermes-plugin.sh  install-production-runtime.py  install-production-runtime.sh  python-resolver.sh  release-candidate-local-gate.py  test-clean-hermes-install.sh  test-headroom-dependency-install.py  test-headroom-dependency-install.sh  test-headroom-runtime-smoke.py  verify-hermes-install.sh
src/hermes_headroom_plugin/: __init__.py  commands.py  health.py  hooks.py  middleware.py  policy.py  proxy.py  routing.py  schemas.py  tools.py  wrappers.py
src/hermes_headroom_plugin/data/systemd/: hermes-context-reduction.service.template
src/hermes_headroom_plugin/skills/headroom-token-cost-evaluation/: SKILL.md
tests/: test_bundled_skill.py  test_clean_home_discovery.py  test_hooks.py  test_install_production_runtime.py  test_lane_expansion_contract.py  test_manifest.py  test_markdown_docs.py  test_policy.py  test_proxy.py  test_python_resolver.py  test_quality_parity_harness.py  test_real_proxy_quality_smoke.py  test_register.py  test_smoke.py  test_tool_execution_middleware.py  test_tools.py  test_wrappers.py
