[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-headroom-plugin"
version = "0.3.5"
description = "Hermes Agent plugin for safe Headroom context reduction, CCR retrieval, proxy smoke tests, and loopback-first runtime guardrails."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes Headroom contributors" }]
dependencies = [
  "PyYAML>=6,<7",
]

[project.urls]
Homepage = "https://github.com/arotonal-ai/hermes-headroom-plugin"
Repository = "https://github.com/arotonal-ai/hermes-headroom-plugin"
"Upstream Headroom" = "https://github.com/chopratejas/headroom"
"Upstream Headroom Docs" = "https://headroomlabs-ai.github.io/headroom/"
"headroom-ai on PyPI" = "https://pypi.org/project/headroom-ai/"

[project.optional-dependencies]
# Install the upstream runtime naturally by default. Operators may override the
# runtime installer with --spec/HEADROOM_AI_SPEC for incident rollback, but the
# packaged extra is intentionally not pinned to a historical Headroom release.
proxy = ["headroom-ai[proxy]"]
test = ["pytest>=8,<10"]
release = ["build>=1,<2"]

[project.entry-points."hermes_agent.plugins"]
headroom_retrieve = "hermes_headroom_plugin"

[project.scripts]
headroom-health-audit = "hermes_headroom_plugin.health:main"
headroom-proxy-start = "hermes_headroom_plugin.proxy:main"
headroom-worker-lane = "hermes_headroom_plugin.wrappers:worker_main"
headroom-background-lane = "hermes_headroom_plugin.wrappers:background_main"
headroom-command-preflight = "hermes_headroom_plugin.wrappers:preflight_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_headroom_plugin = ["skills/*/SKILL.md", "data/systemd/*.template"]
